[package]
name = "blockwheel-kv-ero"
version = "0.1.4"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "blockwheel-kv async frontend via ero."
edition = "2021"

[dependencies]
ero = { git = "https://github.com/swizard0/ero.git" }
# edeltraud = { git = "https://github.com/swizard0/edeltraud.git" }
edeltraud = { path = "../edeltraud" }
alloc-pool = { git = "https://github.com/swizard0/alloc-pool.git" }
# arbeitssklave = { git = "https://github.com/swizard0/arbeitssklave.git" }
arbeitssklave = { path = "../arbeitssklave" }
# blockwheel-fs = { git = "https://github.com/swizard0/blockwheel-fs.git" }
blockwheel-fs = { path = "../ero-blockwheel" }
# blockwheel-kv = { git = "https://github.com/swizard0/blockwheel-kv.git" }
blockwheel-kv = { path = "../ero-blockwheel-kv" }

log = "^0.4"
futures = "^0.3"

tokio = { version = "^1", features = ["full"] }
